--- a/css/style.css
+++ b/css/style.css
@@ -4,32 +4,32 @@ body {
 .slide {
   color: white;
   position: relative;
-  display: none;			
-  line-height: 1.5em;		
+  display: none;
 }
 
 .slide h2 {
-  font-size: 28px;
+  font-size: 36px;
+  line-height: 40px;
   font-weight: bold;
   font-family: 'IM Fell French Canon SC', serif;
   letter-spacing: 5px;
   display: block;
   margin: 20px auto 30px;
-  width: 500px;
+  width: 600px;
   text-align: center;
   text-shadow: 0px 0px 15px #ccc;
   -moz-text-shadow: 0px 0px 15px #ccc;
   -webkit-text-shadow: 0px 0px 15px #ccc;
 }
 .slide h3 {
-  font-size: 20px;
+  font-size: 28px;
   width: 700px;
   text-align: center;
   margin: 10px auto 5px auto;
   display: block;
 }
 .slide h4 {
-  font-size: 18px;
+  font-size: 20px;
   width: 700px;
   text-align: center;
   margin: 10px auto 5px auto;
@@ -44,7 +44,7 @@ body {
   padding: 5px 0px 20px 20px;
   margin: 0 auto 20px;
   width: 600px;
-  
+
 }
 .slide li {
   margin: 10px;
@@ -69,6 +69,9 @@ body {
   line-height: 15px;
   font-family: 'Anonymous Pro';
   max-width: 800px;
+}
+.slide pre.prettyprint {
+  padding: 15px;
 }
 .slide img {
   display: block;
